<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:fadeScrollbars="true"
                                    card_view:cardCornerRadius="10dp"
                                    card_view:cardElevation="5dp"
                                    card_view:cardUseCompatPadding="true"
                                    tools:context="com.hartcode.hartweather.detail.WeatherDetailActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:showIn="@layout/activity_weather_detail">

        <TextView
            android:id="@+id/txtCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/default_city"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_below="@id/txtCityName"

            android:gravity="center_vertical"
            android:src="@mipmap/icon01n"/>

        <TextView
            android:id="@+id/txtWeatherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/imgWeather"
            android:gravity="center_vertical"
            android:text="@string/default_weather_name"
            android:textSize="50sp"/>


        <TextView
            android:id="@+id/txtWeatherTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtCityName"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            android:text="@string/default_temp"
            android:textSize="75sp"/>

        <TextView
            android:id="@+id/txtHighTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/txtWeatherName"
            android:layout_below="@id/txtWeatherTemp"
            android:gravity="center_vertical|center"
            android:text="@string/default_high"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtLowTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtWeatherName"
            android:layout_below="@id/txtWeatherTemp"
            android:layout_toLeftOf="@+id/txtHighTemp"
            android:paddingRight="20sp"
            android:paddingEnd="20sp"
            android:gravity="center_vertical|center"
            android:text="@string/default_low"
            android:textSize="20sp"
          />

        <TextView
            android:id="@+id/txtLastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtHighTemp"
            android:gravity="center_vertical|end"
            android:text="@string/default_last_update"
            android:textSize="12sp"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>

